more fixes from a/b tests on mobile devices

--- a/src/Components/Nav/styles.scss
+++ b/src/Components/Nav/styles.scss
@@ -9,7 +9,9 @@
   width: 30%;
   align-items: center;
   position: absolute;
+  top: 0;
   right: -30%;
+  bottom: 0;
   height: 100%;
   box-shadow: 0 0 10rem #000;
   animation: slide-in 1s forwards ease-in;
